# kolor

./: Cargo.toml  README.md
examples/: Cargo.toml  oklab.rs
kolor/src/: lib.rs
kolor/src/details/: cat.rs  color.rs  conversion.rs  generated_matrices.rs  math.rs  transform.rs  xyz.rs
matrix-gen/: Cargo.toml
matrix-gen/src/: main.rs
src/: color.rs  color_matrices.rs  color_transforms.rs  conversion.rs  generated_matrices.rs  lib.rs  transform.rs
src/details/: cat.rs  color.rs  conversion.rs  generated_matrices.rs  math.rs  transform.rs  xyz.rs
