[package]
name = "kolor"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glam = "0.13.1"
serde = { optional = true, version = "1", features = ["derive"] }
bitflags = "1.2"

[features]
serde1 = ["serde"]
